--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">DailyPlan</string>
-    <string name="task_title">Title:</string>
+    <string name="task_title">Title</string>
     <string name="task_outcome">Outcome:</string>
     <string name="task_first_action">First action:</string>
     <string name="task_basket">Basket:</string>
@@ -12,4 +12,5 @@
     <string name="task_set_reminder">Set reminder</string>
     <string name="task_reminder_set_at">Reminder set at:</string>
     <string name="task_date_placeholder">placeholder</string>
+    <string name="task_priority">Priority</string>
 </resources>
